--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
         <span class="text-teal-300">TAG</span>
         <span class="text-white"> Casts</span>
       </div>
-      <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex">
-        <a class="hover:text-white" href="#gallery">Screenshots</a>
-        <a class="hover:text-white" href="#download">Download</a>
-      </nav>
+      <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex"></nav>
     </header>
 
     <main class="mx-auto w-full max-w-5xl px-5 pb-14 sm:px-6">
