--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main class="mx-auto w-full max-w-5xl px-5 pb-14 sm:px-6">
       <section class="grid gap-8 py-10 md:grid-cols-[1.1fr_0.9fr] md:items-center md:gap-10 md:py-14">
         <div>
-          <p class="text-xs uppercase tracking-[0.35em] text-slate-400">iOS podcast app</p>
+          <p class="text-xs uppercase tracking-[0.35em] text-slate-400">A Podcast app</p>
           <h1 class="mt-4 text-3xl font-semibold leading-tight sm:text-4xl md:text-5xl">
             Tag your favorite episodes. Listen without limits.
           </h1>
