--- a/index.html
+++ b/index.html
@@ -94,13 +94,12 @@
       <section id="gallery" class="mt-0">
         <div class="flex items-end justify-between gap-4">
           <div>
-            <h2 class="text-2xl font-semibold">App screenshots</h2>
+            <h2 class="text-2xl font-semibold">App Screenshots</h2>
             <p class="mt-2 text-sm text-slate-300">
               Swipe left or right to explore the TAG Casts experience.
             </p>
           </div>
           <span class="hidden text-xs uppercase tracking-[0.25em] text-slate-500 md:block">
-            Swipe
           </span>
         </div>
         <div
