--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
       ></div>
     </div>
 
-    <header class="mx-auto flex w-full max-w-5xl items-center justify-between px-6 py-6">
-      <div class="text-lg font-semibold tracking-wide">
+    <header class="mx-auto flex w-full max-w-5xl items-center justify-center px-6 py-8">
+      <div class="text-2xl font-semibold tracking-wide">
         <span class="text-teal-300">TAG</span>
         <span class="text-white"> Casts</span>
       </div>
-      <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex"></nav>
     </header>
 
     <main class="mx-auto w-full max-w-5xl px-5 pb-14 sm:px-6">
