--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="TAG Casts is a modern, free podcast app for fast discovery, smart tagging, and effortless listening."
     />
+    <link rel="icon" type="image/png" href="app_icon.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       .snap-gallery {
