--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
     </main>
 
     <footer class="border-t border-slate-900 py-10 text-center text-xs text-slate-500">
+      <a class="text-teal-300 hover:text-teal-200" href="privacy.html">Privacy Policy</a>
+      <span class="mx-2 text-slate-700">•</span>
       TAG Casts © 2026. Simple, modern, and always free.
     </footer>
   </body>
