--- a/privacy.html
+++ b/privacy.html
@@ -19,12 +19,7 @@
     </div>
 
     <header class="mx-auto flex w-full max-w-5xl items-center justify-center px-6 py-4">
-      <a class="flex items-center gap-3 text-2xl font-semibold tracking-wide" href="index.html">
-        <img
-          src="app_icon.png"
-          alt="TAG Casts app icon"
-          class="h-10 w-10 rounded-2xl border border-slate-800"
-        />
+      <a class="flex items-center gap-3 text-3xl font-semibold tracking-wide" href="index.html">
         <span class="text-teal-300">TAG</span>
         <span class="text-white"> Casts</span>
       </a>
@@ -33,17 +28,24 @@
     <main class="mx-auto w-full max-w-3xl px-6 pb-16">
       <section class="rounded-3xl border border-slate-800 bg-[#101018] p-6 sm:p-8">
         <p class="text-xs uppercase tracking-[0.35em] text-slate-400">Privacy policy</p>
-        <h1 class="mt-4 text-3xl font-semibold leading-tight sm:text-4xl">Your data stays yours.</h1>
+        <h1 class="mt-4 text-3xl font-semibold leading-tight sm:text-4xl">Privacy policy</h1>
         <p class="mt-4 text-sm text-slate-300 sm:text-base">
-          TAG Casts does not collect, store, or share any personal data. The app does not track you
-          across sites, and it does not use analytics or advertising identifiers.
+          TAG Casts is built to keep your listening private. The app does not collect or transmit
+          personal data, and it does not include ads, trackers, or analytics SDKs.
         </p>
-        <p class="mt-4 text-sm text-slate-300 sm:text-base">
-          All listening activity stays on your device. If you contact us for support, we only use
-          the information you provide to respond to your request.
+        <h2 class="mt-6 text-xl font-semibold">Data stored on your device</h2>
+        <p class="mt-3 text-sm text-slate-300 sm:text-base">
+          To work correctly, TAG Casts saves a small set of listening data locally, such as the
+          shows you follow, tags, and your playback position so you can resume later.
+          This information stays on your device.
         </p>
-        <div class="mt-8 border-t border-slate-800 pt-6">
-          <h2 class="text-xl font-semibold">What data other parties may collect and store</h2>
+        <h2 class="mt-6 text-xl font-semibold">Data sharing</h2>
+        <p class="mt-3 text-sm text-slate-300 sm:text-base">
+          TAG Casts does not share your listening data with the developer or any third parties.
+          Your content and preferences remain local.
+        </p>
+        <div class="mt-8">
+          <h2 class="text-xl font-semibold">What data other parties may collect and store?</h2>
           <p class="mt-3 text-sm text-slate-300 sm:text-base">
             TAG Casts uses the public iTunes API to provide podcast search results. When you search,
             Apple may receive and store information such as the words in your query and your public
