--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,7 @@
     <main class="mx-auto w-full max-w-3xl px-6 pb-16">
       <section class="rounded-3xl border border-slate-800 bg-[#101018] p-6 sm:p-8">
         <p class="text-xs uppercase tracking-[0.35em] text-slate-400">Privacy policy</p>
-        <h1 class="mt-4 text-3xl font-semibold leading-tight sm:text-4xl">Privacy policy</h1>
+        <h1 class="mt-4 text-3xl font-semibold leading-tight sm:text-4xl">Privacy Policy</h1>
         <p class="mt-4 text-sm text-slate-300 sm:text-base">
           TAG Casts is built to keep your listening private. The app does not collect or transmit
           personal data, and it does not include ads, trackers, or analytics SDKs.
