Add download link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             Focused on clarity, speed, and features that truly improve the way you enjoy podcasts.
           </p>
           <div class="mt-6 flex flex-col gap-3 sm:flex-row">
-            <a class="inline-flex" href="#download">
+            <a class="inline-flex" href="https://apps.apple.com/us/app/tag-casts/id6749644488">
               <img
                 src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
                 alt="Download on the App Store"
